data/derived/sp14/progs/unify/prog3602.ml.out
Characters 83-84:
  else wwhile b;;
              ^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b * ('a * bool)
